# frakti

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
examples/: add_stars.rs  add_sticker_to_set.rs  api_trait_implementation.rs  async_custom_client.rs  async_file_upload.rs  async_get_me.rs  async_reply_to_message_updates.rs  create_new_sticker_set.rs  custom_client.rs  get_me.rs  inline_keyboard.rs  reply_keyboard.rs  reply_to_message_updates.rs  upload_sticker_file.rs
src/: client_cyper.rs  client_reqwest.rs  client_ureq.rs  error.rs  games.rs  gifts.rs  inline_mode.rs  input_file.rs  input_media.rs  json.rs  lib.rs  methods.rs  parse_mode.rs  passport.rs  payments.rs  response.rs  stickers.rs  test_json.rs  trait_async.rs  trait_sync.rs  types.rs  updates.rs
