[package]
name = "frakti"
version = "0.49.0"
authors = [
    "Ayrat Badykov <ayratin555@gmail.com>",
    "EdJoPaTo <frankenstein-rust@edjopato.de>",
    "Pepe Márquez <pepe.marquezromero@gmail.com>"
]
description = "Telegram bot API client for Rust"
edition = "2021"
rust-version = "1.75.0"
license = "WTFPL"
repository = "https://github.com/PRO-2684/frakti"
readme = "README.md"
keywords = ["request", "http", "client", "bot", "telegram"]
categories = ["web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true

[features]
client-cyper = ["trait-async", "dep:cyper", "dep:compio", "dep:serde_json"]
trait-async = []

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# TODO: remove and fix (or allow explicitly on the specific problem)
missing_errors_doc = "allow"
unreadable_literal = "allow"

[dependencies]
bon = "3.0.0"
macro_rules_attribute = "0.2.0"
paste = "1.0.2"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = { version = "1.0.45", optional = true }
serde_with = { version = "3.0.0", default-features = false, features = ["macros"] }
thiserror = "2"
compio = { version = "0.18.0", optional = true, default-features = false, features = ["macros"] }
cyper = { version = "0.8.3", optional = true, features = ["json", "multipart"] }

[dev-dependencies]
serde_json = "1"

[[example]]
name = "async_get_me"
required-features = ["client-cyper"]

[[example]]
name = "async_reply_to_message_updates"
required-features = ["client-cyper"]

[[example]]
name = "async_file_upload"
required-features = ["client-cyper"]

[[example]]
name = "async_custom_client"
required-features = ["client-cyper"]
